--- a/package.json
+++ b/package.json
@@ -14,19 +14,24 @@
     "@emotion/styled": "^11.14.1",
     "@fontsource/poppins": "^5.2.6",
     "@fontsource/roboto": "^5.2.6",
+    "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/styled-engine-sc": "^7.3.2",
     "@mui/x-data-grid": "^8.11.1",
+    "@tanstack/react-query": "^5.87.4",
     "axios": "^1.11.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "styled-components": "^6.1.19"
+    "react-hook-form": "^7.62.0",
+    "react-router-dom": "^7.9.1",
+    "styled-components": "^6.1.19",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
